[gd_scene load_steps=19 format=3 uid="uid://441g78frfufp"]

[ext_resource type="Script" uid="uid://dugtgck5w4ik" path="res://menus/press_start_menu.gd" id="1_cgt3n"]
[ext_resource type="Texture2D" uid="uid://clakdwoekwrjd" path="res://assets/miscellaneous/megaman_f_start_spritesheet.png" id="2_uvyme"]
[ext_resource type="FontFile" uid="uid://sg5d2u3x7n5d" path="res://assets/fonts/megaman_2.ttf" id="3_nmoe1"]
[ext_resource type="AudioStream" uid="uid://bn0asl87asomc" path="res://assets/music/Mega Man F - Title Screen Theme_from YouTube.mp3" id="4_rn5vc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tce5u"]
atlas = ExtResource("2_uvyme")
region = Rect2(0, 0, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ns7j3"]
atlas = ExtResource("2_uvyme")
region = Rect2(512, 0, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojeqy"]
atlas = ExtResource("2_uvyme")
region = Rect2(1024, 0, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilerm"]
atlas = ExtResource("2_uvyme")
region = Rect2(1536, 0, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_3q666"]
atlas = ExtResource("2_uvyme")
region = Rect2(0, 448, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_hvr4b"]
atlas = ExtResource("2_uvyme")
region = Rect2(512, 448, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_npe54"]
atlas = ExtResource("2_uvyme")
region = Rect2(1024, 448, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_ae0ap"]
atlas = ExtResource("2_uvyme")
region = Rect2(1536, 448, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_dekw4"]
atlas = ExtResource("2_uvyme")
region = Rect2(0, 896, 512, 448)

[sub_resource type="AtlasTexture" id="AtlasTexture_wke47"]
atlas = ExtResource("2_uvyme")
region = Rect2(512, 896, 512, 448)

[sub_resource type="SpriteFrames" id="SpriteFrames_fe25y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tce5u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ns7j3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojeqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilerm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3q666")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hvr4b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_npe54")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ae0ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dekw4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wke47")
}],
"loop": true,
"name": &"animation",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_uasv8"]
resource_name = "FadeOutMenuEffect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("press_start_text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("reprogrammed_text:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_j4xw8"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("animated_menu:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("press_start_text:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("reprogrammed_text:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_44dlj"]
_data = {
&"FadeOutMenuEffect": SubResource("Animation_uasv8"),
&"RESET": SubResource("Animation_j4xw8")
}

[node name="press_start_menu" type="Node2D"]
script = ExtResource("1_cgt3n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -29.0
offset_top = -33.0
offset_right = 803.0
offset_bottom = 739.0
color = Color(0, 0, 0, 1)

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
offset_left = -304.0
offset_top = -88.0
offset_right = -264.0
offset_bottom = -48.0

[node name="animated_menu" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 35)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_fe25y")
animation = &"animation"
frame_progress = 0.423
centered = false

[node name="ColorRect2" type="ColorRect" parent="."]
offset_left = 365.0
offset_top = 398.0
offset_right = 588.0
offset_bottom = 444.0
scale = Vector2(1.5, 1.5)
color = Color(0, 0, 0, 1)

[node name="press_start_text" type="Label" parent="."]
offset_left = 398.0
offset_top = 419.0
offset_right = 560.0
offset_bottom = 442.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("3_nmoe1")
text = "PRESS START"

[node name="press_start_menu_bgm" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-304, -53)
scale = Vector2(1.5, 1.5)
stream = ExtResource("4_rn5vc")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 613.0
offset_top = 552.0
offset_right = 737.0
offset_bottom = 575.0
scale = Vector2(1.5, 1.5)
theme_override_fonts/font = ExtResource("3_nmoe1")
text = "TEST TEXT"

[node name="reprogrammed_text" type="Label" parent="."]
offset_left = 365.0
offset_top = 273.0
offset_right = 557.0
offset_bottom = 296.0
scale = Vector2(2, 2)
theme_override_fonts/font = ExtResource("3_nmoe1")
text = "REPROGRAMMED"

[node name="countdownToDemoTimer" type="Timer" parent="."]
wait_time = 65.0
one_shot = true
autostart = true

[node name="PressStartAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_44dlj")
}

[connection signal="finished" from="press_start_menu_bgm" to="." method="_on_press_start_menu_bgm_finished"]
[connection signal="timeout" from="countdownToDemoTimer" to="." method="_on_countdown_to_demo_timer_timeout"]
[connection signal="animation_changed" from="PressStartAnimationPlayer" to="." method="_on_press_start_animation_player_animation_changed"]
[connection signal="animation_finished" from="PressStartAnimationPlayer" to="." method="_on_press_start_animation_player_animation_finished"]
